fix: overflow

--- a/assets/sass/sections/_gallery.scss
+++ b/assets/sass/sections/_gallery.scss
@@ -14,7 +14,6 @@
   }
 
   &__wrapper {
-    padding: 0 10px;
     @media (min-width: $tablet) {
       display: flex;
       flex-direction: row-reverse;
@@ -23,7 +22,7 @@
     }
 
     @media (min-width: $laptop) {
-      margin: 0 -10px;
+      padding: 0 0 0 10px;
     }
   }
 
